# luau-minify

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  default.nix  flake.nix
src/: globals.h  main.cpp  minifier.cpp  minifier.h  syntax.cpp  syntax.h  tracking.cpp  tracking.h
src/graph/: block.cpp  block.hpp  rtti.cpp  rtti.hpp  statement.cpp  statement.hpp
